# rosjet

./: .gitignore  INSTALLATION.md  README.md  _config.yml  chassis.md  electronics.md  index.md  labs.rosinstall  rosjet.rosinstall  rosjet_install.sh  software.md  wiring.md
_includes/themes/bootstrap-3/: default.html
arduino/src/: rosjet.ino
assets/themes/bootstrap-3/css/: style.css
data_recorder/: CMakeLists.txt  package.xml
data_recorder/src/: data_recorder.cpp
documents/: lab2.md
jet_arduino/: CMakeLists.txt  package.xml
jet_arduino/.pioenvs/: .sconsign.dblite
jet_arduino/launch/: arduino.launch  jet_arduino.launch
jet_arduino/resources/.pioenvs/: structure.hash
jet_arduino/resources/.pioenvs/megaatmega2560/: firmware.elf  firmware.hex
jet_arduino/resources/.pioenvs/megaatmega2560/NewPing/: NewPing.h
jet_arduino/resources/lib/NewPing/: NewPing.cpp
jet_arduino/resources/src/: rosjet.ino
jet_arduino/scripts/: program.sh
jet_arduino/src/: rosjet.ino
jet_bringup/: CMakeLists.txt  package.xml
jet_bringup/launch/: jet_gazebo.launch  jet_real.launch
jet_control/: CMakeLists.txt  package.xml
jet_control/config/: jet_control.yaml
jet_control/launch/: jet_control.launch
jet_description/: CMakeLists.txt  package.xml
jet_description/launch/: jet_rviz.launch  jet_upload.launch
jet_description/urdf/: jet.gazebo  jet.urdf  jet.xacro
jet_driver/: CMakeLists.txt  package.xml
jet_driver/launch/: jet_driver.launch
jet_driver/src/: jet_driver_node.cpp
jet_gazebo/: CMakeLists.txt  package.xml
jet_gazebo/launch/: jet.launch
jet_navigation/: CMakeLists.txt  package.xml
jet_navigation/launch/: jet_navigation.launch
jet_navigation/param/: costmap_common_params.yaml
jet_navigation/src/: stationary_controller.cpp
jet_serial/: CMakeLists.txt  package.xml
jet_serial/launch/: jet_serial.launch
launch/: rosjetson.launch
motor_control/: package.xml
motor_control/src/: motor_control.cpp
src/data_recorder/: CMakeLists.txt
src/data_recorder/src/: data_recorder.cpp
src/motor_control/: CMakeLists.txt
src/motor_control/src/: motor_control.cpp
src/web_dashboard/: CMakeLists.txt
src/web_dashboard/scripts/: web_dashboard
src/web_dashboard/static/: help.html
src/web_dashboard/static/scripts/: main.js
src/web_dashboard/static/styles/: main.css
static/slides/: Lecture-1-3-Intro-Jetson-Toolkit.pptx  Lecture-1-4-Jet_Overview.pptx  Lecture-1-5-Intro_ROS.pptx
web_dashboard/: package.xml  setup.py
web_dashboard/src/web_dashboard/: server.py
web_dashboard/static/: index.html  settings.html  virtualjoystick.js
