<?xml version="1.0"?>
<package>
  <name>data_recorder</name>
  <version>0.0.0</version>
  <description>The data_recorder package</description>

  <maintainer email="jkerfs@calpoly.edu">jkerfs</maintainer>
  <author email="jkerfs@calpoly.edu">jkerfs</author>

  <license>MIT</license>
  <url type="website">https://developer.nvidia.com/embedded/develop/hardware</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>

  <export>

  </export>
</package>
