<?xml version="1.0"?>
<package>
  <name>jet_description</name>
  <version>1.1.6</version>
  <description>
      URDF description for Jet Robot
  </description>

  <author>Jeremy Kerfs</author>
  <author email="jkerfs@calpoly.edu">Jeremy Kerfs</author>
  <maintainer email="jkerfs@calpoly.edu">Jeremy Kerfs</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
