<?xml version="1.0"?>
<package>
  <name>jet_gazebo</name>
  <version>0.0.0</version>
  <description>The jet_gazebo package</description>

  <author>Jeremy Kerfs</author>
  <author email="jkerfs@calpoly.edu">Jeremy Kerfs</author>
  <maintainer email="jkerfs@calpoly.edu">Jeremy Kerfs</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>jet_description</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
  </export>
</package>
