<?xml version="1.0"?>
<package>
  <name>jet_serial</name>
  <version>0.0.0</version>
  <description>The jet_serial package</description>

  <maintainer email="jkerfs@calpoly.edu">jeremy</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
